# cde2310_sim_ws

./: README.md  llms.txt  reset_sim.sh  start_sim.sh  start_vs.sh
src/sim_dashboard/: dashboard.py  run_dashboard.sh
src/sim_dashboard/templates/: index.html
src/tb3_cv/: package.xml  setup.cfg  setup.py
src/tb3_cv/tb3_cv/: aruco_pose_node.py
src/turtlebot3_simulations/turtlebot3_gazebo/launch/: arena_dock.launch.py  arena_maze.launch.py  arena_template_maze.launch.py  spawn_turtlebot3.launch.py
src/turtlebot3_simulations/turtlebot3_gazebo/models/aruco_marker/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/milo_tin/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/milo_tin/meshes/: milo_tin.stl
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_burger/: model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/params/: turtlebot3_burger_bridge.yaml
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/: arena_dock.world  arena_maze.world  arena_template_maze.world
